--- a/css/owl.carousel.css
+++ b/css/owl.carousel.css
@@ -8,7 +8,7 @@
  */
 .owl-carousel {
   display: none;
-  width: 100%;
+  width: 100vw;
   -webkit-tap-highlight-color: transparent;
   /* position relative and z-index fix webkit rendering fonts issue */
   position: relative;
@@ -29,8 +29,7 @@
   .owl-carousel .owl-stage-outer {
     position: relative;
     overflow: hidden;
-    /* fix for flashing background */
-    -webkit-transform: translate3d(0px, 0px, 0px); }
+    background -webkit-transform: translate3d(0px, 0px, 0px); }
   .owl-carousel .owl-wrapper,
   .owl-carousel .owl-item {
     -webkit-backface-visibility: hidden;
