--- a/css/main.css
+++ b/css/main.css
@@ -193,21 +193,21 @@ main #movie-info.container {
 }
 
 .botao {
-    background-color: rgba(0, 0, 0, .50);
+    background-color: rgba(0, 0, 0, 0.75);
     border: none;
     color: white;
-
-    padding: 15px 30px;
-    margin-right: 15px;
-    font-size: 12px;
+    padding: 1rem 2rem;
+    margin-right: 1rem;;
+    font-size: 16px;
     cursor: pointer;
     transition: .3s ease all;
-
 }
 
 .botao:hover{
-    background-color: white;
+    background-color: #FFD50B;
     color: black;
+    font-weight: bold;
+    box-shadow: 3px 3px 2px #e50914;
 }
 
 .botao i{
@@ -298,13 +298,5 @@ footer .useful-link-item {
     text-decoration: none;
 }
 
-footer .botao-codigo-servico {
-    color: rgb(146, 146, 146);
-    font-size: 11px;
-    border: 1px solid rgb(146, 146, 146);
-    background-color: rgba(146,146, 146, 0);
-    padding: 7px;
-    margin-left: 270px;
-}
 
 
