--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@
     font-family: 'Cabin', sans-serif;
 }
 
+
 body {
     background-color: rgb(15, 15, 15);
 }
@@ -26,6 +27,150 @@ a {
 a:hover {
     text-decoration: none;
     color: white;
+}
+
+@media screen and (max-width: 575px) {
+    header .logo {
+        width: 13rem;
+    }
+    
+    header .logo:hover {
+        width: 13.3rem;
+    }
+}
+
+@media screen and (min-width: 576px) and (max-width: 767px) {
+    header .logo {
+        width: 15rem;
+    }
+    
+    header .logo:hover {
+        width: 15.3rem;
+    }
+
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+
+    header .logo, .titulo-filme-img {
+        width: 17rem;
+    }
+    
+    header .logo:hover {
+        width: 17.3rem;
+    }
+
+
+}
+
+@media screen and (min-width: 992px) {
+    header .logo {
+        width: 18rem;
+    }
+    
+    header .logo:hover {
+        width: 18.3rem;
+    }
+
+    header .links-header {
+        margin-right: 1rem;
+        text-decoration: none;
+        font-size: 1.5rem;
+        color: white;
+    }
+
+
+
+}
+
+@media screen and (min-width: 1200px) {
+    header .links-header {
+        margin-right: 3rem;
+        text-decoration: none;
+        font-size: 1.5rem;
+        color: white;
+    }
+}
+
+main .home-banner {
+    font-family: 'Cabin', sans-serif;
+    font-size:  20px;
+    background-image: url('https://www.planocritico.com/wp-content/uploads/2019/08/pulp-fiction-tempos-de-viol%C3%AAncia-plano-cr%C3%ADtico-.jpg');
+    
+    height: 90vh;
+    background-size: cover;
+    background-attachment: fixed;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.filmes {
+
+}
+
+
+.banner-biografia {
+    font-family: 'Cabin', sans-serif;
+    font-size:  20px;
+    background-image: url('https://br.web.img2.acsta.net/newsv7/21/06/29/16/44/2056259.jpg');
+    
+    height: 90vh;
+    background-size: cover;
+    background-attachment: fixed;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.banner-filmes {
+    font-family: 'Cabin', sans-serif;
+    font-size:  20px;
+    background-image: url('https://sm.ign.com/t/ign_br/screenshot/default/tarantino-ranking_ghtj.1280.jpg');
+    
+    height: 90vh;
+    background-size: cover;
+    background-attachment: fixed;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.quentin {
+    width: 25rem;
+}
+
+.descricao-filme1 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 1.5rem;
+    color: white;
+}
+
+.filmes-banner {
+    height: 90vh;
+    
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-attachment: fixed;  
+    background-position-y: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+    
+    background-image: linear-gradient(rgba(0, 0, 0, 0.25),rgba(0,0,0,.25)100%), url('../img/killBill.png');
+    height: 90vh;
+    width:100vw;
+    background-size: cover;
+    background-position: left;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 
@@ -50,20 +195,9 @@ header .container{
     box-shadow: -2px 2px 2px #e50914;
 }
 
-header .logo {
-    width: 18rem;
-}
 
-header .logo:hover {
-    width: 18.3rem;
-}
 
-header .links-header {
-    margin-right: 3rem;
-    text-decoration: none;
-    font-size: 1.5rem;
-    color: white;
-}
+
 
 header .links-header:hover{
     color:#FFD50B;
@@ -114,45 +248,33 @@ header .links-header:hover{
 
 
 /* CSS main */
-
-/* CSS banner principal */
-main .home-banner {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.25),rgba(0,0,0,.25)100%),  url('https://stories.adorocinema.com/5-filmes-ninguem-esperava-sucesso/assets/1.jpeg');
+.filmeprincipal {
+    font-family: 'Cabin', sans-serif;
+    font-size:  20px;
+    background-image: url('https://www.planocritico.com/wp-content/uploads/2019/08/pulp-fiction-tempos-de-viol%C3%AAncia-plano-cr%C3%ADtico-.jpg');
+    
     height: 90vh;
     background-size: cover;
-    background-repeat: no-repeat;
     background-attachment: fixed;
-    background-clip: border-box;
+
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: flex-start;
 }
+
 
 main #movie-info.container {
     margin: 5rem 2rem; 
     height: 30rem;
 } 
 
-.quentin {
-    width: 40rem;
-}
 
 .titulo-filme-img {
     width: 25rem;
 }
 
-.descricao-filme1 {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 2.5rem;
-    color: white;
-}
 
-.descricao-filme2 {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.5rem;
-    color: white;
-}
 
 .btn-banner {
     background-color: rgb(15, 15, 15);
@@ -218,14 +340,6 @@ main #movie-info.container {
     background-color: #0e0e0ed8;
 }
 
-main .filmes-banner {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.25),rgba(0,0,0,.25)100%), url('../img/killBill.png');
-    height: 90vh;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-}
 
 .filmes-texto {
     background-color: rgb(17, 17, 17);
@@ -262,6 +376,24 @@ main .django-banner {
     background-attachment: fixed;
 }
 
+main .killBill-banner {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.25),rgba(0,0,0,.25)100%), url('../img/killBill.png');
+    height: 90vh;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+main .filmes-quentin {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.25),rgba(0,0,0,.25)100%), url('https://sm.ign.com/t/ign_br/screenshot/default/tarantino-ranking_ghtj.1280.jpg');
+    height: 90vh;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
 
 header {
     height: auto;
@@ -285,9 +417,8 @@ footer .fab {
 
 footer .useful-links {
     display: flex;
-    align-content: flex-start;
-    justify-content: space-between;
-    margin: 2rem 16.6rem;
+    justify-content: flex-end;
+    align-items: flex-end;
 }
 
 footer ul li {
@@ -297,7 +428,6 @@ footer ul li {
 
 footer .useful-link-item {
     color: rgb(146, 146, 146);
-    font-size:13px;
     font-family: 'Times New Roman', Times, serif;
     text-decoration: none;
 }
