--- a/css/filmes.css
+++ b/css/filmes.css
@@ -1,8 +1,5 @@
-
-
-/* button {
-    padding: 5px 10px;
-    margin: 0px 10px;
+/* .album-miniaturas {
+    background-color: rgb(19, 19, 19);
 } */
 
 .botaof {
@@ -22,16 +19,6 @@
     background-color: black;
     color: white;
 }
-
-
-
-/* @media screen and (max-width: 700px){
-    header .container{
-        display: flex;  
-        flex-direction: column;
-    }
-} */
-
 
 
 .card img{
